# ARTNfocus

./: .dockerignore  .rtd-environment.yml  .travis.yml  Dockerfile  MANIFEST.in  README.rst  setup.cfg  setup.py  tox.ini
.github/workflows/: artnfocus-tests.yml  docker.yml
artnfocus/: __init__.py  imutils.py  mont4k_focus.py  telescope.py
artnfocus/data/: focusinit.fits
artnfocus/tests/: test_imutil.py  test_telescope.py
docs/: conf.py  index.rst
docs/artnfocus/: index.rst
notebooks/: 61" Curvature Wavefront Sensing.ipynb
scripts/: docker_artnfocus.sh  mont4k_focus.py
