[build_sphinx]
source-dir = docs
build-dir = docs/_build
all_files = 1

[build_docs]
source-dir = docs
build-dir = docs/_build
all_files = 1

[upload_docs]
upload-dir = docs/_build/html
show-response = 1

[tool:pytest]
minversion = 3.0
norecursedirs = build docs/_build
doctest_plus = enabled
addopts = -p no:warnings

[ah_bootstrap]
auto_use = True

[flake8]
exclude = extern,sphinx,*parsetab.py

[pycodestyle]
exclude = extern,sphinx,*parsetab.py

[metadata]
name = artnfocus
description = Focus and wavefront sensing utilities for the ARTN
long_description = Focus and wavefront sensing utilities for the Arizona Robotic Telescope Network (ARTN)
author = T. E. Pickering
author_email = te.pickering@gmail.com
license = BSD 3-Clause
url = http://github.com/tepickering/ARTNfocus/
edit_on_github = True
github_project = tepickering/ARTNfocus

# version should be PEP440 compatible (https://www.python.org/dev/peps/pep-0440/)
version = 0.0.dev

# Note: you will also need to change this in your package's __init__.py
minimum_python_version = 3.7

[options.extras_require]
docs = sphinx-astropy; pytest<5.1
test = pytest<5.1; pytest-astropy; nose; coverage; codecov
all = astropy; photutils; ccdproc; astroscrappy

[options.entry_points]
console_scripts =
    mont4k_focus.py = artnfocus.mont4k_focus:main
