[metadata]
name = artnfocus
author = T. E. Pickering
author_email = te.pickering@gmail.com
license = BSD 3-Clause
license_file = licenses/LICENSE.rst
url = https://github.com/tepickering/ARTNfocus
description = Focus and wavefront sensing utilities for the ARTN
long_description = file: README.rst
long_description_content_type = text/x-rst
edit_on_github = Truew
github_project = tepickering/ARTNfocus

[options]
zip_safe = False
packages = find:
python_requires = >=3.7
setup_requires = setuptools_scm
install_requires =
    astropy
    photuils
    ccdproc
    astroscrappy

[options.extras_require]
test =
    pytest-astropy
docs =
    sphinx-astropy

[options.package_data]
* = *.fits
artnfocus = data/*

[tool:pytest]
testpaths = "artnfocus" "docs"
astropy_header = true
doctest_plus = enabled
text_file_format = rst
addopts = --doctest-rst

[coverage:run]
omit =
    artnfocus/_astropy_init*
    artnfocus/conftest.py
    artnfocus/*setup_package*
    artnfocus/tests/*
    artnfocus/*/tests/*
    artnfocus/extern/*
    artnfocus/version*
    */artnfocus/_astropy_init*
    */artnfocus/conftest.py
    */artnfocus/*setup_package*
    */artnfocus/tests/*
    */artnfocus/*/tests/*
    */artnfocus/extern/*
    */artnfocus/version*

[coverage:report]
exclude_lines =
    # Have to re-enable the standard pragma
    pragma: no cover
    # Don't complain about packages we have installed
    except ImportError
    # Don't complain if tests don't hit assertions
    raise AssertionError
    raise NotImplementedError
    # Don't complain about script hooks
    def main\(.*\):
    # Ignore branches that don't pertain to this version of Python
    pragma: py{ignore_python_version}
    # Don't complain about IPython completion helper
    def _ipython_key_completions_
